<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Calypso Networks Association https://www.calypsonet-asso.org/
  ~
  ~ See the NOTICE file(s) distributed with this work for additional information
  ~ regarding copyright ownership.
  ~
  ~ This program and the accompanying materials are made available under the terms of the
  ~ Eclipse Public License 2.0 which is available at http://www.eclipse.org/legal/epl-2.0
  ~
  ~ SPDX-License-Identifier: EPL-2.0
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.eclipse.keyple.demo.control.activities.CardReaderActivity"
    android:background="@drawable/ic_bg">

    <include
        layout="@layout/logo_toolbar"
        android:id="@+id/appBarLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <TextView
        android:id="@+id/home_description"
        android:layout_width="@dimen/home_text_width"
        android:layout_height="wrap_content"
        android:text="@string/home_description"
        style="@style/bigRegularBlue"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/home_element_margin" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:layout_width="@dimen/reading_animation_size"
        android:layout_height="0dp"
        app:lottie_fileName="anim_card_scan.json"
        app:lottie_autoPlay="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toTopOf="@id/present_txt" />

    <TextView
        android:id="@+id/present_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/present_support_label"
        android:gravity="center"
        style="@style/bigBoldBlue"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/loading_animation"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom" />

    <ImageView
        android:id="@+id/eclipse_logo"
        android:layout_width="@dimen/eclipse_logo_width"
        android:layout_height="@dimen/eclipse_logo_height"
        android:src="@drawable/ic_logo_eclipse"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:contentDescription="@string/eclipse_foundation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/home_element_margin" />

    <Button
        android:id="@+id/valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        style="@style/whiteBtnText"
        android:text="@string/valid"
        app:layout_constraintTop_toBottomOf="@id/present_txt"
        app:layout_constraintBottom_toTopOf="@id/eclipse_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/invalid"/>

    <Button
        android:id="@+id/invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid"
        android:background="@drawable/btn_blue"
        style="@style/whiteBtnText"
        app:layout_constraintTop_toBottomOf="@id/present_txt"
        app:layout_constraintBottom_toTopOf="@id/eclipse_logo"
        app:layout_constraintStart_toEndOf="@id/valid"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>